[package]
name = "ntex-cors"
version = "2.0.0"
authors = ["ntex contributors <team@ntex.rs>"]
description = "Cross-origin resource sharing (CORS) for ntex applications."
readme = "README.md"
keywords = ["ntex", "web"]
homepage = "https://ntex.rs"
repository = "https://github.com/ntex-rs/ntex-extras.git"
documentation = "https://docs.rs/ntex-cors/"
license = "MIT"
edition = "2018"

[lib]
name = "ntex_cors"
path = "src/lib.rs"

[dependencies]
ntex = "2"
derive_more = "0.99"
futures = "0.3"

[dev-dependencies]
ntex = { version = "2", features=["tokio"] }
