[package]
name = "ntex-cors"
version = "3.1.0"
authors = ["ntex contributors <team@ntex.rs>"]
description = "Cross-origin resource sharing (CORS) for ntex applications."
readme = "README.md"
keywords = ["ntex", "web"]
homepage = "https://ntex.rs"
repository = "https://github.com/ntex-rs/ntex-extras.git"
documentation = "https://docs.rs/ntex-cors/"
license = "MIT OR Apache-2.0"
edition = "2024"
rust-version = "1.85"

[lib]
name = "ntex_cors"
path = "src/lib.rs"

[dependencies]
ntex = "3.0.0-pre.9"
derive_more = { version = "2", features = ["from", "display"] }
futures = "0.3"

[dev-dependencies]
ntex = { version = "3.0.0-pre.9", features=["neon"] }
