[package]
name = "ntex-files"
version = "3.0.0"
authors = ["ntex contributors <team@ntex.rs>"]
description = "Static files support for ntex web."
readme = "README.md"
keywords = ["ntex", "http", "async", "futures"]
homepage = "https://ntex.rs"
repository = "https://github.com/ntex-rs/ntex-extras.git"
documentation = "https://docs.rs/ntex-files/"
categories = ["asynchronous", "web-programming::http-server"]
license = "MIT OR Apache-2.0"
edition = "2024"
rust-version = "1.85"

[lib]
name = "ntex_files"
path = "src/lib.rs"

[dependencies]
ntex = "3.0.0-pre.10"
ntex-http = "1"
bitflags = "2"
futures = "0.3"
derive_more = { version = "2", features = ["from", "display"] }
http = "1"
log = "0.4"
mime = "0.3"
mime_guess = "2.0"
percent-encoding = "2.1"
v_htmlescape = "0.15"
unicase = "2.6"
language-tags = "0.3"
httpdate = "1.0"

[dev-dependencies]
ntex = { version = "3.0.0-pre.6", features = ["neon", "openssl", "compress"] }
