[package]
name = "ntex-identity"
version = "1.0.0"
authors = ["ntex contributors <team@ntex.rs>"]
description = "Identity service for ntex web framework."
readme = "README.md"
keywords = ["http", "web", "async"]
homepage = "https://ntex.rs"
repository = "https://github.com/ntex-rs/ntex-extras.git"
documentation = "https://docs.rs/ntex-identity/"
license = "MIT"
edition = "2018"

[lib]
name = "ntex_identity"
path = "src/lib.rs"

[features]
default = ["cookie-policy"]

cookie-policy = ["cookie/secure", "ntex/cookie"]

[dependencies]
ntex = "2"
futures = "0.3"
serde = "1.0"
serde_json = "1.0"
derive_more = "0.99"
cookie = { version = "0.18", features = ["private"] }
time = { version = "0.3", default-features = false, features = ["std"] }

[dev-dependencies]
ntex = { version = "2", features=["tokio"] }
