[package]
name = "ntex-identity"
version = "3.0.0"
authors = ["ntex contributors <team@ntex.rs>"]
description = "Identity service for ntex web framework."
readme = "README.md"
keywords = ["http", "web", "async"]
homepage = "https://ntex.rs"
repository = "https://github.com/ntex-rs/ntex-extras.git"
documentation = "https://docs.rs/ntex-identity/"
license = "MIT OR Apache-2.0"
edition = "2024"
rust-version = "1.85"

[lib]
name = "ntex_identity"
path = "src/lib.rs"

[features]
default = ["cookie-policy"]

cookie-policy = ["cookie/secure", "ntex/cookie"]

[dependencies]
ntex = "3.0.0-pre.6"
futures = "0.3"
serde = "1.0"
serde_json = "1.0"
derive_more = { version = "2", features = ["from", "display"] }
cookie = { version = "0.18", features = ["private"] }
time = { version = "0.3", default-features = false, features = ["std"] }

[dev-dependencies]
ntex = { version = "3.0.0-pre.6", features=["neon"] }
