[package]
name = "ntex-multipart-derive"
version = "3.1.0"
authors = ["ntex contributors <team@ntex.rs>"]
description = "Multipart Derive support for ntex web framework."
readme = "README.md"
keywords = ["http", "web", "framework", "async", "ntex"]
homepage = "https://ntex.rs"
repository = "https://github.com/ntex-rs/ntex-extras.git"
documentation = "https://docs.rs/ntex-multipart-derive/"
license = "MIT OR Apache-2.0"
edition = "2024"
rust-version = "1.88"

[lib]
name = "ntex_multipart_derive"
path = "src/lib.rs"
proc-macro = true

[dependencies]
bytesize = "2"
darling = "0.23"
proc-macro2 = "1"
quote = "1"
syn = "2"

[dev-dependencies]
ntex = "3"
ntex-multipart = { version = "3.1.0", features = ["form"] }
