[package]
name = "ntex-multipart"
version = "3.0.0-pre.0"
authors = ["ntex contributors <team@ntex.rs>"]
description = "Multipart support for ntex web framework."
readme = "README.md"
keywords = ["http", "web", "framework", "async", "ntex"]
homepage = "https://ntex.rs"
repository = "https://github.com/ntex-rs/ntex-extras.git"
documentation = "https://docs.rs/ntex-multipart/"
license = "MIT OR Apache-2.0"
edition = "2024"
rust-version = "1.85"

[lib]
name = "ntex_multipart"
path = "src/lib.rs"

[dependencies]
ntex = "3.0.0-pre.1"
derive_more = { version = "2", features = ["from", "display"] }
httparse = "1.3"
futures = "0.3"
log = "0.4"
mime = "0.3"
twoway = "0.2"

[dev-dependencies]
ntex = { version = "3.0.0-pre.1", features=["neon"] }
