[package]
name = "ntex-multipart"
version = "3.2.0"
authors = ["ntex contributors <team@ntex.rs>"]
description = "Multipart support for ntex web framework."
readme = "README.md"
keywords = ["http", "web", "framework", "async", "ntex"]
homepage = "https://ntex.rs"
repository = "https://github.com/ntex-rs/ntex-extras.git"
documentation = "https://docs.rs/ntex-multipart/"
license = "MIT OR Apache-2.0"
edition = "2024"
rust-version = "1.88"

[lib]
name = "ntex_multipart"
path = "src/lib.rs"

[features]
form = ["derive", "serde", "serde_json", "serde_plain"]
derive = ["ntex-multipart-derive"]

[dependencies]
ntex = "3.6"
ntex-files = "3.2"
ntex-multipart-derive = { version = "3.0.0", optional = true }
derive_more = { version = "2", features = ["deref", "deref_mut", "error", "from"] }
httparse = "1.3"
futures = "0.3"
log = "0.4"
mime = "0.3"
twoway = "0.2"
serde = { version = "1", optional = true }
serde_json = { version = "1", optional = true }
serde_plain = { version = "1", optional = true }
tempfile = "3.4"

[dev-dependencies]
ntex = { version = "3.6", features=["tokio"] }
futures-test = "0.3"
