[package]
name = "ntex-session"
version = "0.2.0"
authors = ["ntex contributors <team@ntex.rs>"]
description = "Session for ntex web framework."
readme = "README.md"
keywords = ["http", "web", "framework", "async", "futures"]
homepage = "https://ntex.rs"
repository = "https://github.com/ntex-rs/ntex-extras.git"
documentation = "https://docs.rs/ntex-session/"
license = "MIT"
edition = "2018"

[lib]
name = "ntex_session"
path = "src/lib.rs"

[features]
default = ["cookie-session"]

# sessions feature, session require "ring" crate and c compiler
cookie-session = ["cookie/secure", "ntex/cookie"]

[dependencies]
ntex = "0.6.0-beta.0"
cookie = "0.16"
derive_more = "0.99"
futures = "0.3"
serde = "1.0"
serde_json = "1.0"
time = { version = "0.3", default-features = false, features = ["std"] }

[dev-dependencies]
ntex = { version = "0.6.0-beta.0", features=["tokio"] }
