[package]
name = "ntex-session"
version = "3.3.0"
authors = ["ntex contributors <team@ntex.rs>"]
description = "Session for ntex web framework."
readme = "README.md"
keywords = ["http", "web", "framework", "async", "futures"]
homepage = "https://ntex.rs"
repository = "https://github.com/ntex-rs/ntex-extras.git"
documentation = "https://docs.rs/ntex-session/"
license = "MIT OR Apache-2.0"
edition = "2024"
rust-version = "1.88"

[lib]
name = "ntex_session"
path = "src/lib.rs"

[features]
default = ["cookie-session"]

# sessions feature, session require "ring" crate and c compiler
cookie-session = ["cookie/secure", "ntex/cookie"]

[dependencies]
ntex = "3.0"
cookie = "0.18"
derive_more = { version = "2", features = ["from", "display"] }
futures = "0.3"
serde = "1.0"
serde_json = "1.0"
time = { version = "0.3", default-features = false, features = ["std"] }

[dev-dependencies]
ntex = { version = "3.0", features=["neon"] }
